# quantflow

./: .editorconfig  .env.example  Directory.Build.props  LICENSE  METRICS.md  README.md  docker-compose.yml
execution_layer/: Cargo.toml  Dockerfile  build.rs
execution_layer/src/: main.rs
orchestrator/: Dockerfile  GlobalSuppressions.cs  Program.cs  appsettings.Development.json  appsettings.json  orchestrator.csproj  quantflow.http
orchestrator.IntegrationTests/: orchestrator.IntegrationTests.csproj
orchestrator.IntegrationTests/GrpcCommunication/: ExecutionServiceClientIntegrationTests.cs  ProtoSerializationTests.cs  ServiceUnavailableTests.cs  SignalServiceClientIntegrationTests.cs
orchestrator.IntegrationTests/TestServers/: GrpcTestServerFactory.cs  MockExecutionService.cs  MockSignalService.cs
orchestrator.Tests/: orchestrator.Tests.csproj
orchestrator.Tests/Data/: DatabaseSeederTests.cs
orchestrator.Tests/Services/: PortfolioServiceTests.cs  RiskManagerTests.cs
orchestrator/Api/: Models.cs
orchestrator/Channels/: PriceTickChannel.cs
orchestrator/Clients/: ExecutionServiceClient.cs  SignalServiceClient.cs
orchestrator/Commands/: SeedDataCommand.cs
orchestrator/Configuration/: ConfigurationValidator.cs  QuantFlowSettings.cs  ServiceCollectionExtensions.cs
orchestrator/Data/: AppDbContext.cs  DatabaseSeeder.cs
orchestrator/Logging/: CorrelationIdMiddleware.cs
scripts/: run-all.ps1  run-all.sh  seed-data.sh  setup-dev.ps1  setup-dev.sh
shared/: quantflow.proto
signal_engine/: .gitignore  Dockerfile  Makefile  main.py  requirements.txt
(+18 files in other folders)
