[package]
name = "execution_layer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full", "signal"] }
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["server", "tokio"] }
http-body-util = "0.1"
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
tonic-build = "0.12"
